python-convert/httproute-manifests/compare.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  creationTimestamp: null
  name: grafana-mykubernetes-com
  namespace: monitoring
spec:
  hostnames:
  - mykubernetes.com
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: my-kube-prometheus-stack-grafana
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /grafana
status:
  parents: []
