python-convert/httproute-manifests/httproute-argo-argo-server.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argo-server
  namespace: argo
spec:
  hostnames:
  - mykubernetes.com
  parentRefs:
  - kind: Gateway
    name: cafe-gateway
    namespace: default
  rules:
  - backendRefs:
    - name: argo-server
      port: 2746
    matches:
    - path:
        type: RegularExpression
        value: /argo(/|$)(.*)
