python-convert/httproute-manifests/httproute-argo-rollouts-argo-rollouts.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argo-rollouts
  namespace: argo-rollouts
spec:
  hostnames:
  - argo-rollouts.mykubernetes.com
  parentRefs:
  - kind: Gateway
    name: cafe-gateway
    namespace: default
  rules:
  - backendRefs:
    - name: argo-rollouts-dashboard
      port: 3100
    matches:
    - path:
        type: ImplementationSpecific
        value: /
