python-convert/httproute-manifests/httproute-argocd-argocd-server-ingress.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argocd-server-ingress
  namespace: argocd
spec:
  hostnames:
  - mykubernetes.com
  parentRefs:
  - kind: Gateway
    name: cafe-gateway
    namespace: default
  rules:
  - backendRefs:
    - name: argocd-server
      port: 443
    matches:
    - path:
        type: PathPrefix
        value: /argocd
    filters: 
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
