python-convert/httproute-manifests/httproute-default-wiki.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: wiki
  namespace: default
spec:
  hostnames:
  - mykubernetes.com
  parentRefs:
  - kind: Gateway
    name: cafe-gateway
    namespace: default
  rules:
  - backendRefs:
    - name: wiki
      port: 8080
    matches:
    - path:
        type: ImplementationSpecific
        value: /wiki(/|$)(.*)(/|$)(.*)
