python-convert/httproute-manifests/httproute-kubernetes-dashboard-dashboard.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: dashboard
  namespace: kubernetes-dashboard
spec:
  hostnames:
  - "mykubernetes.com"
  parentRefs:
  - kind: Gateway
    name: cafe-gateway
    namespace: default
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /dashboard-do-caraio
    backendRefs:
    - name: kubernetes-dashboard-web
      namespace: kubernetes-dashboard
      port: 8000
      kind: Service
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
