python-convert/httproute-manifests/httproute-monitoring-alertmanager.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  hostnames:
  - mykubernetes.com
  parentRefs:
  - kind: Gateway
    name: cafe-gateway
    namespace: default
  rules:
  - backendRefs:
    - name: my-kube-prometheus-stack-alertmanager
      port: 9093
    matches:
    - path:
        type: PathPrefix
        value: /alertmanager
