python-convert/httproute-manifests/httproute-monitoring-grafana.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  hostnames:
  - mykubernetes.com
  parentRefs:
  - kind: Gateway
    name: cafe-gateway
    namespace: default
  rules:
  - backendRefs:
    - name: my-kube-prometheus-stack-grafana
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /grafana
