python-convert/httproute-manifests/httproute-monitoring-prometheus.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-route
  namespace: monitoring
spec:
  hostnames:
  - mykubernetes.com
  parentRefs:
  - kind: Gateway
    name: cafe-gateway
    namespace: default
  rules:
  - backendRefs:
    - name: my-kube-prometheus-stack-prometheus
      port: 9090
      namespace: monitoring
    matches:
    - path:
        type: PathPrefix
        value: /prometheus
    filters:
    - responseHeaderModifier:
        add:
        - name: Access-Control-Allow-Origin
          value: '*'
      type: ResponseHeaderModifier
